# OpenGLLearning

./: CMakeLists.txt  brun.sh  build.sh  compileShader.sh
assets/shaders/: ground.fs  normal.fs  shader.fs  shader.vs  sphere.fs
internal/Engine/: CMakeLists.txt
internal/Engine/Components/: CMakeLists.txt
internal/Engine/Components/src/: camera.cpp  component.cpp  mesh.cpp  meshRenderer.cpp
internal/Engine/Components/src/headers/: camera.hpp  componenets.fwd.hpp  component.hpp  mesh.hpp  meshRenderer.hpp
internal/Engine/Components/src/headers/Componenet/: componenets.fwd.hpp  component.hpp  meshRenderer.hpp
internal/Engine/Nodes/: CMakeLists.txt
internal/Engine/Nodes/src/: camera.cpp  cameraNode.cpp  node.cpp  scene.cpp  sceneNode.cpp  transform.cpp  transformNode.cpp
internal/Engine/Nodes/src/headers/: cameraNode.hpp  node.hpp  nodes.fwd.hpp  sceneNode.hpp  transformNode.hpp
internal/Engine/Nodes/src/headers/Node/: camera.hpp  node.hpp  scene.hpp  transform.hpp
internal/Engine/src/: camera.cpp  engine.cpp  etime.cpp  functions.cpp  gameObject.cpp  inputHandler.cpp  material.cpp  node.cpp  shaders.cpp  simpleCamera.cpp  transformNode.cpp
internal/Engine/src/headers/: camera.hpp  engine.fwd.hpp  engine.hpp  gameObject.hpp  inputHandler.hpp  material.hpp  node.hpp  shaders.hpp  simpleCamera.hpp  transformNode.hpp
internal/Essentials/: CMakeLists.txt
internal/Essentials/src/: etime.cpp  functions.cpp  gameObject.cpp  material.cpp  shaders.cpp
internal/Essentials/src/headers/: etime.hpp  functions.hpp  gameObject.hpp  material.hpp  property.hpp  shaders.hpp
internal/Shaders/: CMakeLists.txt
internal/Shaders/src/: shaders.cpp
internal/Shaders/src/headers/: shaders.hpp
src/: camera.cpp  functions.cpp  main.cpp  propertyTest.cpp  test.cpp
src/headers/: functions.hpp  gameObject.hpp
